Section Combat: Create HealthBar widget class and Bind the progress bar

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,3 +86,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBar",NewName="/Script/Slash.Enemy.HealthBarComponent")
