Section Combat: Play death montage when Enemy dies

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -89,3 +89,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBar",NewName="/Script/Slash.Enemy.HealthBarComponent")
++PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBarWidget",NewName="/Script/Slash.Enemy.HealthBarComponent")
