--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,3 +90,7 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBar",NewName="/Script/Slash.Enemy.HealthBarComponent")
 +PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBarWidget",NewName="/Script/Slash.Enemy.HealthBarComponent")
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
