Section Smarter Enemy: Refactor `GetHit` interface to  improve hit reaction handling using hitter location

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,6 +90,7 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBar",NewName="/Script/Slash.Enemy.HealthBarComponent")
 +PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBarWidget",NewName="/Script/Slash.Enemy.HealthBarComponent")
++FunctionRedirects=(OldName="/Script/Slash.BaseCharacter.SetupWeaponCollisionEnabled",NewName="/Script/Slash.BaseCharacter.SetWeaponCollisionEnabled")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
