Section Souls: Create Soul class with pickup logic and integrate NiagaraComponent for item effects

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,6 +91,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBar",NewName="/Script/Slash.Enemy.HealthBarComponent")
 +PropertyRedirects=(OldName="/Script/Slash.Enemy.HealthBarWidget",NewName="/Script/Slash.Enemy.HealthBarComponent")
 +FunctionRedirects=(OldName="/Script/Slash.BaseCharacter.SetupWeaponCollisionEnabled",NewName="/Script/Slash.BaseCharacter.SetWeaponCollisionEnabled")
++PropertyRedirects=(OldName="/Script/Slash.Item.Effect",NewName="/Script/Slash.Item.ItemEffect")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
